@@ -4,6 +4,6 @@ File is not encrypted
 File is not linearized
 WARNING: split-content-stream-errors.pdf (file position 557): error decoding stream data for object 6 0: LZWDecoder: bad code received
 WARNING: split-content-stream-errors.pdf (file position 557): stream will be re-processed without filtering to avoid data loss
-WARNING: content stream: ignoring non-stream while parsing content streams
+WARNING: content stream objects (item index 0 (from 0)): ignoring non-stream in an array of streams
 WARNING: split-content-stream-errors.pdf (file position 557): error decoding stream data for object 6 0: LZWDecoder: bad code received
 WARNING: content stream (content stream object 6 0): errors while decoding content stream
